--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,50 +9,62 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="mobilecomputing.isnumberprime.MainActivity"
     android:orientation="vertical"
+    android:background="@drawable/background"
     android:weightSum="1">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/TextView1"
+        android:layout_marginTop="30dp"
         android:gravity="center"
-        android:textSize="25dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="60dp"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:layout_marginTop="150dp"
         android:text="Is Number Prime ?"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="25dp"
-
         />
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity = "center">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Correct"
+        android:background="@color/white"
+        android:drawableLeft="@drawable/intitled"
+        android:text="True"
+        android:textColor="@color/green"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="195dp"
         android:id="@+id/button1" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Incorrect"
+        android:background="@color/white"
+        android:drawableRight="@drawable/intitled1"
+        android:text="False"
+        android:textColor="@color/red"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="195dp"
         android:id="@+id/button2" />
-        </LinearLayout>
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:gravity= "center"
-        android:layout_gravity="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="250dp"
+        android:id="@+id/button3"
+
+        android:drawableRight="@drawable/next"
         android:text="Next"
         />
 
-</LinearLayout>
+</RelativeLayout>
