--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,10 @@
         android:textColor="@color/green"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="195dp"
+        android:textSize="15dp"
         android:id="@+id/button1" />
+
+
 
     <Button
         android:layout_width="wrap_content"
@@ -52,6 +55,7 @@
         android:textColor="@color/red"
         android:layout_marginLeft="180dp"
         android:layout_marginTop="195dp"
+        android:textSize="15sp"
         android:id="@+id/button2" />
 
     <Button
@@ -62,7 +66,7 @@
         android:layout_marginLeft="120dp"
         android:layout_marginTop="250dp"
         android:id="@+id/button3"
-
+        android:textSize="20sp"
         android:drawableRight="@drawable/next"
         android:text="Next"
         />
