--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -22,62 +22,56 @@
         android:text=""
         />
 
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/TextView1"
-        android:layout_marginTop="45dp"
         android:gravity="center"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="60dp"
+        android:textSize="40dp"
+        android:layout_marginTop="20dp"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="60dp"
         android:text="Is Number Prime ?"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="25dp"
         />
 
     <Button
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:drawableLeft="@drawable/intitled"
-        android:text="True"
         android:textColor="@color/green"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="195dp"
-        android:textSize="17sp"
+        android:text="True"
+        android:layout_marginLeft="180dp"
+        android:layout_marginTop="100dp"
         android:id="@+id/button1" />
 
-
-
     <Button
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:drawableRight="@drawable/intitled1"
-        android:text="False"
         android:textColor="@color/red"
-        android:layout_marginLeft="180dp"
-        android:layout_marginTop="195dp"
-        android:textSize="17sp"
+        android:text="False"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="100dp"
         android:id="@+id/button2" />
 
     <Button
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:gravity= "center"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginLeft="110dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginLeft="450dp"
+        android:layout_marginTop="180dp"
         android:id="@+id/button3"
-        android:textSize="20sp"
         android:drawableRight="@drawable/next"
         android:text="Next"
         />
@@ -89,8 +83,8 @@
         android:drawableRight="@drawable/hint"
         android:text="Hint"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="405dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginTop="190dp"
         android:textSize="17sp"
         android:id="@+id/button4" />
 
@@ -103,8 +97,9 @@
         android:drawableRight="@drawable/cheat"
         android:text="Cheat"
         android:textColor="@color/colorPrimaryDark"
-        android:layout_marginLeft="180dp"
-        android:layout_marginTop="405dp"
+        android:layout_marginLeft="300dp"
+        android:layout_marginTop="190dp"
         android:textSize="17sp"
         android:id="@+id/button5" />
+
 </RelativeLayout>
